--- a/Esercizio_2/Dockerfile
+++ b/Esercizio_2/Dockerfile
@@ -9,9 +9,10 @@ FROM gcc:latest
 # and set that as the working location
 COPY . /usr/src/myapp
 WORKDIR /usr/src/myapp
+COPY . .
 
 # This command compiles your app using GCC, adjust for your source code
-RUN g++ -o myapp main.cpp
+RUN g++ -o myapp main.cpp src/Utils.cpp
 
 # This command runs your application, comment out this line to compile only
 CMD ["./myapp"]
